--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "burger",
+  "name": "hamburger",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,16 +8,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andrewcswartz/Burger.git"
+    "url": "git+https://github.com/tjochelt/hamburger.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/andrewcswartz/Burger/issues"
+    "url": "https://github.com/tjochelt/hamburger/issues"
   },
-  "homepage": "https://github.com/andrewcswartz/Burger#readme",
+  "homepage": "https://github.com/tjochelt/hamburger#readme",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.16.0"
